--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,13 @@
         android:theme="@style/Theme.Seen"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
-
+            android:name=".ui.register.RegisterLocationActivity"
+            android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.profile.LoginActivity"
             android:exported="true"
             android:theme="@style/AppTheme.Splash">
             <intent-filter>
@@ -35,13 +35,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".ProfileAddActivity"
+            android:name=".ui.profile.ProfileAddActivity"
             android:exported="false" />
-
         <activity
-            android:name=".RegisterLostItemActivity"
+            android:name=".ui.register.RegisterLostItemActivity"
             android:exported="false" />
     </application>
 
