feat: 네이버 지도 연결 및 화면 가운데 마커 표시및 좌표 반환 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -41,6 +43,12 @@
         <activity
             android:name=".ui.register.RegisterLostItemActivity"
             android:exported="false" />
-    </application>
 
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="lj8zi1w1sr" />
+        <meta-data
+            android:name="com.naver.maps.map.CLINET_SECRET"
+            android:value="yqKIrCDuxgrZaj1hKCoRlMqhOm2W2A4m3GMJYXFM"/>
+    </application>
 </manifest>
